--- a/research/calibration-of-trapped-ion-systems.html
+++ b/research/calibration-of-trapped-ion-systems.html
@@ -74,6 +74,14 @@
         <div class="container">
           <div class="row gtr-200">
             <div class="col-4 col-12-mobile" id="sidebar">
+              <nav aria-label="Neutral Atom Research Sections">
+                <h3 class="sr-only">Section Navigation</h3>
+                <ul class="subpage-links">
+                  <li><a href="#introduction">Introduction</a></li>
+                  <li><a href="#methods">Methods</a></li>
+                  <li><a href="#results">Results</a></li>
+                </ul>
+              </nav>
               <hr class="first" />
 
               <section>
