--- a/research/index.html
+++ b/research/index.html
@@ -37,19 +37,17 @@
               <a href="/research/index.html">Research</a>
               <ul>
                 <li>
-                  <a
-                    href="/research/compilation-for-neutral-atom-quantum-computers.html"
+                  <a href="/research/neutral-atom-compilation.html"
                     >Neutral Atom Compilation</a
                   >
                 </li>
                 <li>
-                  <a href="/research/calibration-of-trapped-ion-systems.html"
+                  <a href="/research/trapped-ion-calibration.html"
                     >Trapped Ion Calibration</a
                   >
                 </li>
                 <li>
-                  <a
-                    href="/research/charge-noise-in-semiconductor-spin-qubits.html"
+                  <a href="/research/semiconductor-charge-noise.html"
                     >Semiconductor Charge Noise</a
                   >
                 </li>
@@ -92,21 +90,19 @@
                 </h4>
                 <p></p>
                 <h4>
-                  <a
-                    href="/research/compilation-for-neutral-atom-quantum-computers.html"
+                  <a href="/research/neutral-atom-compilation.html"
                     >Neutral Atom Compilation</a
                   >
                 </h4>
                 <p></p>
                 <h4>
-                  <a href="/research/calibration-of-trapped-ion-systems.html"
+                  <a href="/research/trapped-ion-calibration.html"
                     >Trapped Ion Calibration</a
                   >
                 </h4>
                 <p></p>
                 <h4>
-                  <a
-                    href="/research/charge-noise-in-semiconductor-spin-qubits.html"
+                  <a href="/research/semiconductor-charge-noise.html"
                     >Semiconductor Charge Noise</a
                   >
                 </h4>
@@ -156,8 +152,7 @@
               <section>
                 <header>
                   <h3>
-                    <a
-                      href="/research/compilation-for-neutral-atom-quantum-computers.html"
+                    <a href="/research/neutral-atom-compilation.html"
                       >Neutral Atom Compilation</a
                     >
                   </h3>
@@ -186,7 +181,7 @@
                 </p>
                 <footer>
                   <a
-                    href="/research/compilation-for-neutral-atom-quantum-computers.html"
+                    href="/research/neutral-atom-compilation.html"
                     class="button"
                     >Read more</a
                   >
@@ -196,7 +191,7 @@
               <section>
                 <header>
                   <h3>
-                    <a href="/research/calibration-of-trapped-ion-systems.html"
+                    <a href="/research/trapped-ion-calibration.html"
                       >Trapped Ion Calibration</a
                     >
                   </h3>
@@ -220,7 +215,7 @@
                 </p>
                 <footer>
                   <a
-                    href="/research/calibration-of-trapped-ion-systems.html"
+                    href="/research/trapped-ion-calibration.html"
                     class="button"
                     >Read more</a
                   >
@@ -230,9 +225,7 @@
               <section>
                 <header>
                   <h3>
-                    <a
-                      href="/research/charge-noise-in-semiconductor-spin-qubits.html"
-                    >
+                    <a href="/research/semiconductor-charge-noise.html">
                       Charge Noise in Semiconductor Spin Qubits for Quantum
                       Computing</a
                     >
@@ -254,7 +247,7 @@
                 </p>
                 <footer>
                   <a
-                    href="/research/charge-noise-in-semiconductor-spin-qubits.html"
+                    href="/research/semiconductor-charge-noise.html"
                     class="button"
                     >Read more</a
                   >
