--- a/research/semiconductor-charge-noise.html
+++ b/research/semiconductor-charge-noise.html
@@ -72,40 +72,52 @@
         <div class="container">
           <div class="row gtr-200">
             <div class="col-4 col-12-mobile" id="sidebar">
-              <hr class="first" />
+              <nav class="research-main-nav" aria-label="Research Categories">
+                <h3 class="nav-section-title">Research Areas</h3>
+                <ul class="research-links">
+                  <li>
+                    <a href="/research/index.html" class="icon solid fa-home"
+                      >Overview</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="/research/neutral-atom-compilation.html"
+                      class="icon solid fa-atom"
+                      >Neutral Atom Calibration</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="/research/trapped-ion-calibration.html"
+                      class="icon solid fa-microchip"
+                      >Trapped Ion Calibration</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="/research/semiconductor-charge-noise.html"
+                      class="icon solid fa-wave-square"
+                      >Semiconductors</a
+                    >
+                  </li>
+                </ul>
+              </nav>
 
-              <section>
-                <h4>
-                  <a href="/research/index.html">Overview</a>
-                </h4>
-                <p></p>
-                <h4>
-                  <a href="/research/neutral-atom-compilation.html"
-                    >Neutral Atom Compilation</a
-                  >
-                </h4>
-                <p></p>
-                <h4>
-                  <a href="/research/trapped-ion-calibration.html"
-                    >Trapped Ion Calibration</a
-                  >
-                </h4>
-                <p></p>
-                <h4>
-                  <a href="/research/semiconductor-charge-noise.html"
-                    >Semiconductor Charge Noise</a
-                  >
-                </h4>
-                <ol>
+              <!-- 当前页面章节导航 -->
+              <nav class="page-sections-nav" aria-label="Page Sections">
+                <h3 class="nav-section-title">Page Contents</h3>
+                <ul class="section-links">
                   <li>
-                    <a href="#introduction" class="scrolly">Introduction</a>
+                    <a href="#introduction" class="scroll-link">Introduction</a>
                   </li>
-                  <li><a href="#theory" class="scrolly">Theory</a></li>
+                  <li><a href="#methods" class="scroll-link">Methods</a></li>
+                  <li><a href="#results" class="scroll-link">Results</a></li>
                   <li>
-                    <a href="#simulation" class="scrolly">Simulation</a>
+                    <a href="#discussion" class="scroll-link">Discussion</a>
                   </li>
-                </ol>
-              </section>
+                </ul>
+              </nav>
             </div>
             <div class="col-8 col-12-mobile imp-mobile" id="content">
               <article id="main">
