--- a/research/trapped-ion-calibration.html
+++ b/research/trapped-ion-calibration.html
@@ -73,7 +73,7 @@
           <div class="row gtr-200">
             <div class="col-4 col-12-mobile" id="sidebar">
               <nav class="research-main-nav" aria-label="Research Categories">
-                <h3 class="nav-section-title">Research Areas</h3>
+                <h3 class="nav-section-title">Research Projects</h3>
                 <ul class="research-links">
                   <li>
                     <a href="/research/index.html" class="icon solid fa-home"
