--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
           </article>
           <section class="timeline-container" id="education">
             <header>
-              <h3 class="custom-title">Education</h3>
+              <h3>Education</h3>
             </header>
             <div class="timeline-line"></div>
             <div class="timeline-item card">
@@ -228,7 +228,7 @@
 
           <section class="timeline-container" id="research">
             <header>
-              <h3 class="custom-title">Research Experience</h3>
+              <h3>Research Experience</h3>
             </header>
             <div class="timeline-line"></div>
             <div class="timeline-item card">
@@ -394,7 +394,7 @@
 
           <section id="awards">
             <header>
-              <h3 class="custom-title">Awards and Honors</h3>
+              <h3>Awards and Honors</h3>
             </header>
             <ul>
               <li>
