--- a/research/index.html
+++ b/research/index.html
@@ -76,7 +76,10 @@
                 <h3 class="nav-section-title">Research Projects</h3>
                 <ul class="research-links">
                   <li>
-                    <a href="/research/index.html" class="icon solid fa-home"
+                    <a
+                      href="/research/index.html"
+                      class="icon solid fa-home"
+                      aria-current="page"
                       >Overview</a
                     >
                   </li>
@@ -98,7 +101,7 @@
                     <a
                       href="/research/semiconductor-charge-noise.html"
                       class="icon solid fa-microchip"
-                      >Semiconductors</a
+                      >Semiconductor Charge Noise</a
                     >
                   </li>
                 </ul>
