--- a/research/neutral-atom-compilation.html
+++ b/research/neutral-atom-compilation.html
@@ -84,6 +84,7 @@
                     <a
                       href="/research/neutral-atom-compilation.html"
                       class="icon solid fa-atom"
+                      aria-current="page"
                       >Neutral Atom Calibration</a
                     >
                   </li>
@@ -98,7 +99,7 @@
                     <a
                       href="/research/semiconductor-charge-noise.html"
                       class="icon solid fa-microchip"
-                      >Semiconductors</a
+                      >Semiconductor Charge Noise</a
                     >
                   </li>
                 </ul>
