--- a/research/semiconductor-charge-noise.html
+++ b/research/semiconductor-charge-noise.html
@@ -98,7 +98,8 @@
                     <a
                       href="/research/semiconductor-charge-noise.html"
                       class="icon solid fa-microchip"
-                      >Semiconductors</a
+                      aria-current="page"
+                      >Semiconductor Charge Noise</a
                     >
                   </li>
                 </ul>
