--- a/research/trapped-ion-calibration.html
+++ b/research/trapped-ion-calibration.html
@@ -91,6 +91,7 @@
                     <a
                       href="/research/trapped-ion-calibration.html"
                       class="icon solid fa-wave-square"
+                      aria-current="page"
                       >Trapped Ion Calibration</a
                     >
                   </li>
@@ -98,7 +99,7 @@
                     <a
                       href="/research/semiconductor-charge-noise.html"
                       class="icon solid fa-microchip"
-                      >Semiconductors</a
+                      >Semiconductor Charge Noise</a
                     >
                   </li>
                 </ul>
