--- a/research/trapped-ion-calibration.html
+++ b/research/trapped-ion-calibration.html
@@ -112,10 +112,9 @@
                   <li>
                     <a href="#introduction" class="scroll-link">Introduction</a>
                   </li>
-                  <li><a href="#methods" class="scroll-link">Methods</a></li>
-                  <li><a href="#results" class="scroll-link">Results</a></li>
+                  <li><a href="#hardware" class="scroll-link">Hardware</a></li>
                   <li>
-                    <a href="#discussion" class="scroll-link">Discussion</a>
+                    <a href="#compilation" class="scroll-link">Compilation</a>
                   </li>
                 </ul>
               </nav>
