--- a/research/neutral-atom-compilation.html
+++ b/research/neutral-atom-compilation.html
@@ -112,10 +112,9 @@
                   <li>
                     <a href="#introduction" class="scroll-link">Introduction</a>
                   </li>
-                  <li><a href="#methods" class="scroll-link">Methods</a></li>
-                  <li><a href="#results" class="scroll-link">Results</a></li>
+                  <li><a href="#physical" class="scroll-link">Physical</a></li>
                   <li>
-                    <a href="#discussion" class="scroll-link">Discussion</a>
+                    <a href="#calibration" class="scroll-link">Calibration</a>
                   </li>
                 </ul>
               </nav>
