--- a/research/semiconductor-charge-noise.html
+++ b/research/semiconductor-charge-noise.html
@@ -112,10 +112,9 @@
                   <li>
                     <a href="#introduction" class="scroll-link">Introduction</a>
                   </li>
-                  <li><a href="#methods" class="scroll-link">Methods</a></li>
-                  <li><a href="#results" class="scroll-link">Results</a></li>
+                  <li><a href="#theory" class="scroll-link">Theory</a></li>
                   <li>
-                    <a href="#discussion" class="scroll-link">Discussion</a>
+                    <a href="#simulation" class="scroll-link">Simulation</a>
                   </li>
                 </ul>
               </nav>
