--- a/research/index.html
+++ b/research/index.html
@@ -76,31 +76,22 @@
                 <h3 class="nav-section-title">Research Projects</h3>
                 <ul class="research-links">
                   <li>
-                    <a
-                      href="/research/index.html"
-                      class="icon solid fa-home"
-                      aria-current="page"
+                    <a href="/research/index.html" aria-current="page"
                       >Overview</a
                     >
                   </li>
                   <li>
-                    <a
-                      href="/research/neutral-atom-compilation.html"
-                      class="icon solid fa-atom"
+                    <a href="/research/neutral-atom-compilation.html"
                       >Neutral Atom Calibration</a
                     >
                   </li>
                   <li>
-                    <a
-                      href="/research/trapped-ion-calibration.html"
-                      class="icon solid fa-wave-square"
+                    <a href="/research/trapped-ion-calibration.html"
                       >Trapped Ion Calibration</a
                     >
                   </li>
                   <li>
-                    <a
-                      href="/research/semiconductor-charge-noise.html"
-                      class="icon solid fa-microchip"
+                    <a href="/research/semiconductor-charge-noise.html"
                       >Semiconductor Charge Noise</a
                     >
                   </li>
