--- a/research/semiconductor-charge-noise.html
+++ b/research/semiconductor-charge-noise.html
@@ -76,28 +76,21 @@
                 <h3 class="nav-section-title">Research Projects</h3>
                 <ul class="research-links">
                   <li>
-                    <a href="/research/index.html" class="icon solid fa-home"
-                      >Overview</a
-                    >
+                    <a href="/research/index.html">Overview</a>
                   </li>
                   <li>
-                    <a
-                      href="/research/neutral-atom-compilation.html"
-                      class="icon solid fa-atom"
+                    <a href="/research/neutral-atom-compilation.html"
                       >Neutral Atom Calibration</a
                     >
                   </li>
                   <li>
-                    <a
-                      href="/research/trapped-ion-calibration.html"
-                      class="icon solid fa-wave-square"
+                    <a href="/research/trapped-ion-calibration.html"
                       >Trapped Ion Calibration</a
                     >
                   </li>
                   <li>
                     <a
                       href="/research/semiconductor-charge-noise.html"
-                      class="icon solid fa-microchip"
                       aria-current="page"
                       >Semiconductor Charge Noise</a
                     >
