--- a/research/neutral-atom-compilation.html
+++ b/research/neutral-atom-compilation.html
@@ -73,7 +73,7 @@
           <div class="row gtr-200">
             <div class="col-4 col-12-mobile" id="sidebar">
               <nav class="research-main-nav" aria-label="Research Categories">
-                <h3 class="nav-section-title">Research Projects</h3>
+                <h3>Research Projects</h3>
                 <ul class="research-links">
                   <li>
                     <a href="/research/index.html">Overview</a>
@@ -100,7 +100,7 @@
 
               <!-- 当前页面章节导航 -->
               <nav class="page-sections-nav" aria-label="Page Sections">
-                <h3 class="nav-section-title">Page Contents</h3>
+                <h3>Page Contents</h3>
                 <ul class="section-links">
                   <li>
                     <a href="#introduction" class="scroll-link">Introduction</a>
