--- a/research/index.html
+++ b/research/index.html
@@ -72,6 +72,7 @@
         <div class="container">
           <div class="row gtr-200">
             <div class="col-4 col-12-mobile" id="sidebar">
+              <hr class="first" />
               <nav class="research-main-nav" aria-label="Research Categories">
                 <h3>Research Projects</h3>
                 <ul class="research-links">
