--- a/tools/latex2all.html
+++ b/tools/latex2all.html
@@ -1,24 +1,117 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LaTeX 转换工具</title>
+    <title>LaTeX to All - Chen's Physics World</title>
+    <meta charset="utf-8" />
+    <link rel="icon" href="/images/icon.png" type="image/png" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, user-scalable=no"
+    />
+    <link rel="stylesheet" href="/assets/css/main.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=nutrition"
+    />
+    <noscript
+      ><link rel="stylesheet" href="/assets/css/noscript.css"
+    /></noscript>
   </head>
+
   <body>
-    <h2>上传 LaTeX 文件</h2>
-    <input type="file" id="latexFile" />
-    <select id="format">
-      <option value="html">HTML</option>
-      <option value="text">Text (未实现)</option>
-      <option value="markdown">Markdown (未实现)</option>
-    </select>
-    <button onclick="convertLatex()">转换</button>
+    <div id="page-wrapper">
+      <!-- Header -->
+      <div id="header">
+        <!-- Inner -->
+        <div class="inner">
+          <header>
+            <h1>LaTeX2All</h1>
+          </header>
+        </div>
+      </div>
 
-    <h3>转换结果：</h3>
-    <pre id="output"></pre>
+      <h2>Upload LaTeX file</h2>
+      <input type="file" id="latexFile" />
+      <select id="format">
+        <option value="html">HTML</option>
+        <option value="text">Text (waiting...)</option>
+        <option value="markdown">Markdown (waiting...)</option>
+      </select>
+      <button onclick="convertLatex()">Convert</button>
 
-    <script src="css/js/convert.js"></script>
-    <!-- 外部 JavaScript 文件 -->
+      <h3>Results</h3>
+      <pre id="output"></pre>
+      <!-- Footer -->
+      <div id="footer">
+        <div class="container">
+          <div class="row">
+            <div class="col-12">
+              <!-- Contact -->
+              <section class="contact">
+                <ul class="icons">
+                  <li>
+                    <a
+                      href="mailto:chen.huang23@imperial.ac.uk"
+                      class="icon fa-solid fa-envelope"
+                      ><span class="label">Email</span></a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="https://github.com/chenx820"
+                      class="icon brands fa-github"
+                      ><span class="label">GitHub</span></a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.linkedin.com/in/chen-huang-820x/"
+                      class="icon brands fa-linkedin-in"
+                      ><span class="label">Linkedin</span></a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.zhihu.com/people/huang-chen-54-4"
+                      class="icon brands fa-zhihu"
+                      ><span class="label">Zhihu</span></a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="/docs/CV_ChenHuang.pdf"
+                      class="icon fa-solid fa-file"
+                      ><span class="label">CV</span></a
+                    >
+                  </li>
+                </ul>
+              </section>
+
+              <!-- Copyright -->
+              <div class="copyright">
+                <ul class="menu">
+                  <li>&copy; 2025 Chen Huang. All rights reserved.</li>
+                  <li>
+                    Design: <a href="http://html5up.net">HTML5 UP</a>,
+                    <a href="https://www.deepseek.com/">DeepSeek</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Scripts -->
+    <script src="/assets/js/jquery.min.js"></script>
+    <script src="/assets/js/jquery.dropotron.min.js"></script>
+    <script src="/assets/js/jquery.scrolly.min.js"></script>
+    <script src="/assets/js/jquery.scrollex.min.js"></script>
+    <script src="/assets/js/browser.min.js"></script>
+    <script src="/assets/js/breakpoints.min.js"></script>
+    <script src="/assets/js/util.js"></script>
+    <script src="/assets/js/main.js"></script>
+    <script src="/assets/js/convert.js"></script>
   </body>
 </html>
