--- a/tools/latex2all.html
+++ b/tools/latex2all.html
@@ -28,19 +28,64 @@
             <h1>LaTeX2All</h1>
           </header>
         </div>
+
+        <!-- Nav -->
+        <nav id="nav">
+          <ul>
+            <li><a href="/index.html">Home</a></li>
+            <li>
+              <a href="/research/index.html">Research</a>
+              <ul>
+                <li>
+                  <a href="/research/neutral-atom-compilation.html"
+                    >Neutral Atom Compilation</a
+                  >
+                </li>
+                <li>
+                  <a href="/research/trapped-ion-calibration.html"
+                    >Trapped Ion Calibration</a
+                  >
+                </li>
+                <li>
+                  <a href="/research/semiconductor-charge-noise.html"
+                    >Semiconductor Charge Noise</a
+                  >
+                </li>
+              </ul>
+            </li>
+            <li><a href="/publications.html">Publications</a></li>
+
+            <li><a href="/notes.html">Notes</a></li>
+            <li><a href="/outreach/ibpe.html">Outreach</a></li>
+            <li>
+              <a href="#">Life</a>
+              <ul>
+                <li><a href="/photography.html">Photography</a></li>
+              </ul>
+            </li>
+          </ul>
+        </nav>
       </div>
 
-      <h2>Upload LaTeX file</h2>
-      <input type="file" id="latexFile" />
-      <select id="format">
-        <option value="html">HTML</option>
-        <option value="text">Text (waiting...)</option>
-        <option value="markdown">Markdown (waiting...)</option>
-      </select>
-      <button onclick="convertLatex()">Convert</button>
+      <!-- Main -->
+      <div class="wrapper style1">
+        <div class="container">
+          <article id="main" class="special">
+            <h3>Upload your LaTeX file</h3>
+            <input type="file" id="latexFile" />
 
-      <h3>Results</h3>
-      <pre id="output"></pre>
+            <select id="format">
+              <option value="html">HTML</option>
+              <option value="text">Text (waiting...)</option>
+              <option value="markdown">Markdown (waiting...)</option>
+            </select>
+            <button onclick="convertLatex()">Convert</button>
+            <h3>Results</h3>
+            <pre id="output"></pre>
+          </article>
+        </div>
+      </div>
+
       <!-- Footer -->
       <div id="footer">
         <div class="container">
