--- a/tools/latex2all.html
+++ b/tools/latex2all.html
@@ -104,14 +104,8 @@
                 ></textarea>
 
                 <div class="conversion-tools" style="margin-top: 1rem">
-                  <button onclick="copyToClipboard()">
-                    <span class="material-symbols-outlined">content_copy</span>
-                    Copy All
-                  </button>
-                  <button onclick="exportToFile()">
-                    <span class="material-symbols-outlined">download</span>
-                    Download
-                  </button>
+                  <button onclick="copyToClipboard()">Copy All</button>
+                  <button onclick="exportToFile()">Download</button>
                 </div>
               </div>
             </div>
