--- a/tools/latex2all.html
+++ b/tools/latex2all.html
@@ -81,7 +81,7 @@
               </p>
             </header>
             <div class="card">
-              <h3>📝 Upload your LaTeX file</h3>
+              <h3 style="margin: 1.5rem 0">Upload your LaTeX file</h3>
               <input type="file" id="latexFile" accept=".tex" />
 
               <select id="format" class="format-select">
