--- a/tools/latex2all.html
+++ b/tools/latex2all.html
@@ -105,7 +105,7 @@
 
                 <div class="conversion-tools" style="margin-top: 1rem">
                   <button onclick="copyToClipboard()">Copy All</button>
-                  <button onclick="exportToFile()">Download</button>
+                  <button onclick="exportToFile()">Export</button>
                 </div>
               </div>
             </div>
