--- a/tools/latex2all.html
+++ b/tools/latex2all.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>LaTeX to All - Chen's Physics World</title>
+    <title>LaTeX2All - Chen's Physics World</title>
     <meta charset="utf-8" />
     <link rel="icon" href="/images/icon.png" type="image/png" />
     <meta
@@ -112,6 +112,103 @@
           </article>
         </div>
       </div>
+
+      <!-- 在</body>标签前添加收款码模态框 -->
+      <div id="donate-modal" class="donate-modal">
+        <div class="donate-content">
+          <span class="close">&times;</span>
+          <h3>感谢支持！(๑•̀ㅂ•́)و✧</h3>
+          <div class="qr-codes">
+            <img src="/acc/wechat-qr.jpg" alt="微信收款码" class="qr-code" />
+          </div>
+        </div>
+      </div>
+
+      <!-- 在版权信息上方添加赞赏按钮 -->
+      <section class="donate-section">
+        <button id="donate-btn" class="donate-button">
+          <span class="material-symbols-outlined">favorite</span>
+          赞赏支持
+        </button>
+      </section>
+
+      <style>
+        /* 添加CSS样式 */
+        .donate-button {
+          background: #ff6b6b;
+          color: white;
+          padding: 12px 24px;
+          border: none;
+          border-radius: 25px;
+          cursor: pointer;
+          font-size: 1.1em;
+          transition: transform 0.3s ease;
+          display: flex;
+          align-items: center;
+          gap: 8px;
+          margin: 20px auto;
+        }
+
+        .donate-button:hover {
+          transform: scale(1.05);
+          background: #ff5252;
+        }
+
+        .donate-modal {
+          display: none;
+          position: fixed;
+          z-index: 1000;
+          left: 0;
+          top: 0;
+          width: 100%;
+          height: 100%;
+          background-color: rgba(0, 0, 0, 0.8);
+        }
+
+        .donate-content {
+          background-color: #fefefe;
+          margin: 15% auto;
+          padding: 20px;
+          border-radius: 10px;
+          width: 80%;
+          max-width: 500px;
+          text-align: center;
+          position: relative;
+        }
+
+        .qr-codes {
+          display: flex;
+          justify-content: space-around;
+          margin-top: 20px;
+        }
+
+        .qr-code {
+          width: 45%;
+          border-radius: 10px;
+          box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .close {
+          position: absolute;
+          right: 20px;
+          top: 10px;
+          font-size: 28px;
+          cursor: pointer;
+        }
+      </style>
+
+      <script>
+        // 添加JavaScript控制
+        const modal = document.getElementById("donate-modal");
+        const btn = document.getElementById("donate-btn");
+        const span = document.getElementsByClassName("close")[0];
+
+        btn.onclick = () => (modal.style.display = "block");
+        span.onclick = () => (modal.style.display = "none");
+        window.onclick = (event) => {
+          if (event.target == modal) modal.style.display = "none";
+        };
+      </script>
 
       <!-- Footer -->
       <div id="footer">
