--- a/tools/latex2all.html
+++ b/tools/latex2all.html
@@ -117,9 +117,13 @@
       <div id="donate-modal" class="donate-modal">
         <div class="donate-content">
           <span class="close">&times;</span>
-          <h3>感谢支持！(๑•̀ㅂ•́)و✧</h3>
+          <h3>Thank you for your support! (๑•̀ㅂ•́)و✧</h3>
           <div class="qr-codes">
-            <img src="/acc/wechat-qr.jpg" alt="微信收款码" class="qr-code" />
+            <img
+              src="/images/private/wechat-qr.jpg"
+              alt="WeChat QR Codes"
+              class="qr-code"
+            />
           </div>
         </div>
       </div>
@@ -127,75 +131,10 @@
       <!-- 在版权信息上方添加赞赏按钮 -->
       <section class="donate-section">
         <button id="donate-btn" class="donate-button">
-          <span class="material-symbols-outlined">favorite</span>
-          赞赏支持
+          <i class="fa-regular fa-heart"></i>
+          Support My Work
         </button>
       </section>
-
-      <style>
-        /* 添加CSS样式 */
-        .donate-button {
-          background: #ff6b6b;
-          color: white;
-          padding: 12px 24px;
-          border: none;
-          border-radius: 25px;
-          cursor: pointer;
-          font-size: 1.1em;
-          transition: transform 0.3s ease;
-          display: flex;
-          align-items: center;
-          gap: 8px;
-          margin: 20px auto;
-        }
-
-        .donate-button:hover {
-          transform: scale(1.05);
-          background: #ff5252;
-        }
-
-        .donate-modal {
-          display: none;
-          position: fixed;
-          z-index: 1000;
-          left: 0;
-          top: 0;
-          width: 100%;
-          height: 100%;
-          background-color: rgba(0, 0, 0, 0.8);
-        }
-
-        .donate-content {
-          background-color: #fefefe;
-          margin: 15% auto;
-          padding: 20px;
-          border-radius: 10px;
-          width: 80%;
-          max-width: 500px;
-          text-align: center;
-          position: relative;
-        }
-
-        .qr-codes {
-          display: flex;
-          justify-content: space-around;
-          margin-top: 20px;
-        }
-
-        .qr-code {
-          width: 45%;
-          border-radius: 10px;
-          box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-        }
-
-        .close {
-          position: absolute;
-          right: 20px;
-          top: 10px;
-          font-size: 28px;
-          cursor: pointer;
-        }
-      </style>
 
       <script>
         // 添加JavaScript控制
