--- a/tools/latex2all.html
+++ b/tools/latex2all.html
@@ -131,7 +131,7 @@
       <!-- 在版权信息上方添加赞赏按钮 -->
       <section class="donate-section">
         <button id="donate-btn" class="donate-button">
-          <a  class="fas fa-heart"></i>
+          <i class="fas fa-heart"></i>
           Support My Work
         </button>
       </section>
