--- a/publications.html
+++ b/publications.html
@@ -80,6 +80,22 @@
             </header>
             <section>
               <header>
+                <h3>2025</h3>
+              </header>
+              <ul>
+                <li>
+                  <strong>Chen Huang</strong> and Jingbo Wang, "Ion trap chip
+                  parameter correction method and device, electronic equipment
+                  and medium,"
+                  <i
+                    >Chinese Patent
+                    <a href="https://patents.google.com/patent/CN117454997/en"
+                      >CN117454997</a
+                    ></i
+                  >, Granted 2025.
+                </li>
+              </ul>
+              <header>
                 <h3>2024</h3>
               </header>
               <ul>
@@ -139,22 +155,7 @@
                   >)
                 </li>
               </ul>
-              <header>
-                <h3>2023</h3>
-              </header>
-              <ul>
-                <li>
-                  <strong>Chen Huang</strong> and Jingbo Wang, "Ion trap chip
-                  parameter correction method and device, electronic equipment
-                  and medium,"
-                  <i
-                    >Chinese Patent
-                    <a href="https://patents.google.com/patent/CN117454997/en"
-                      >CN117454997</a
-                    ></i
-                  >, 2023.
-                </li>
-              </ul>
+              
             </section>
           </article>
         </div>
