--- a/publications.html
+++ b/publications.html
@@ -79,7 +79,6 @@
               </h2>
             </header>
             <section>
-              
               <header>
                 <h3>2024</h3>
               </header>
@@ -118,7 +117,11 @@
                     <a href="https://patents.google.com/patent/CN117454997/en"
                       >CN117454997</a
                     ></i
-                  >, Granted 2025.
+                  >, Granted 2025. (<a
+                    href="docs/publications/patent-2023114448525.pdf"
+                    PDF
+                  ></a
+                  >)
                 </li>
               </ul>
               <header>
@@ -156,7 +159,6 @@
                   >)
                 </li>
               </ul>
-              
             </section>
           </article>
         </div>
