--- a/publications.html
+++ b/publications.html
@@ -119,8 +119,7 @@
                     ></i
                   >, Granted 2025. (<a
                     href="docs/publications/patent-2023114448525.pdf"
-                    PDF
-                  ></a
+                    >PDF</a
                   >)
                 </li>
               </ul>
